--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 SECRET_KEYDB = https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley
-NAMEDB = https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley
-USERDB = https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley
-PASSWORDDB = https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley!
-HOSTDB = https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley
-HASHTYPEDB = https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley
+NAMEDB = medkit
+USERDB = medkit
+PASSWORDDB = Cardiominds2022
+HOSTDB = medkit2022.postgres.database.azure.com
 EMAIL_HOST_USER = https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley
 EMAIL_HOST_PASSWORD = https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley
 EMAIL_BACKEND = https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley
